--- a/package.json
+++ b/package.json
@@ -11,14 +11,29 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.38.0",
-    "vite": "^5.4.2",
+    "@google/generative-ai": "^0.21.0",
+    "framer-motion": "^11.11.17",
+    "fuse.js": "^7.0.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
+    "moment": "^2.30.1",
+    "openai": "^4.67.3",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.15.0",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.9",
+    "react-hook-form": "^7.53.2",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.6.3",
+    "react-router-hash-link": "^2.4.3",
+    "react-select": "^5.8.3",
     "recharts": "^2.5.0",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.4",
+    "uuid": "^10.0.0",
+    "vite": "^5.4.2",
+    "xlsx": "^0.18.5",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
