--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.38.0",
     "@google/generative-ai": "^0.21.0",
+    "@tanstack/react-table": "^8.11.3",
+    "composio-core": "^0.3.0",
+    "easymde": "^2.18.0",
     "framer-motion": "^11.11.17",
     "fuse.js": "^7.0.0",
     "leaflet": "^1.9.4",
@@ -21,13 +24,17 @@
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-calendar": "^5.0.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.9",
     "react-hook-form": "^7.53.2",
     "react-leaflet": "^4.2.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^7.6.3",
     "react-router-hash-link": "^2.4.3",
     "react-select": "^5.8.3",
+    "react-simplemde-editor": "^5.2.0",
+    "react-avatar": "^5.0.3",
     "recharts": "^2.5.0",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.4",
